[tool.poetry]
name = "repl_python3_FuzzyInterestingModem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"
"discord.py" = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
